src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Subscription_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription Name</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>((1 OR 2) AND (6 OR 7)) OR ((1 OR 2) AND (3 OR 4) AND 5)</booleanFilter>
            <filterItems>
                <field>Zuora__Subscription__c.Zuora__Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <filterItems>
                <field>Zuora__Subscription__c.Zuora__Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>Zuora__Subscription__c.Subscription_Type_1__c</field>
                <operation>equals</operation>
                <value>Publication</value>
            </filterItems>
            <filterItems>
                <field>Zuora__Subscription__c.Subscription_Type__c</field>
                <operation>equals</operation>
                <value>Publication</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Complaint - Newspaper, Complaint - Magazine, Complaint - Digital</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Enquiry, Start Subscription, Stop Subscription, Temp Stop Subscription, Refund, Change of Credit Card, Change of Payment Type, Change of Address/Vendor, Change of Particulars, Bypass Credit Card, Adjustments, Retention Outbound, Change of Subscription</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Renewal of Subscription, Vendor Stop Request/Complaint</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Zuora__Subscription__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subscription_Start_Date__c</fullName>
        <formula>Subscription_Name__r.Zuora__SubscriptionStartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscription Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Temp_Stop_Date__c</fullName>
        <label>Temp Stop Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Temp_Stop_Qty__c</fullName>
        <label>Temp Stop Qty</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Temp_Stop_Sub__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Temp Stop Sub</label>
        <referenceTo>Zuora__Subscription__c</referenceTo>
        <relationshipLabel>Cases (Temp Stop Sub)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Temp_Stop_Type__c</fullName>
        <label>Temp Stop Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Temp_Stop_Updated__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Temp Stop record that was previously updated. (To be cancelled).</description>
        <label>Temp Stop Updated</label>
        <referenceTo>Temp_Stop__c</referenceTo>
        <relationshipLabel>Cases (Temp Stop Updated)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Temp_Stop_VSub__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Temp Stop VSub</label>
        <referenceTo>Subscription_Vendor__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Temp_Stop__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Temp Stop</label>
        <referenceTo>Temp_Stop__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Terminating_Reason__c</fullName>
        <label>Terminating Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Package - Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Package - Downgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Package - Misc. Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change to another pub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment failure - Credit card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment failure - Paypal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment failure- Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer request - Not reading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer request - Moving overseas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer request - Service / Delivery issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer request - Digital / apps issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer request - Policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer request - No reason given</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reduction in quantity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Termination_Reason__c</fullName>
        <label>Termination Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Package - Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Package - Downgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Package - Misc. Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change to another pub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment failure - Credit card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment failure - Paypal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment failure- Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer request - Not reading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer request - Moving overseas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer request - Service / Delivery issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer request - Digital / apps issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer request - Policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer request - No reason given</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reduction in quantity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No time to read</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel often / moving overseas (decline digital subn)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No promotion / free gift (decline retention offers)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivery service issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital / apps issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subscription fee too expensive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Read from other free sources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dissatisfied with newspaper content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Undecided on renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subscriber is uncontactable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Thread_ID__c</fullName>
        <formula>&quot;ref:00D&quot;&amp;MID(Id,4,1)&amp;RIGHT($Organization.Id, 4) &amp;&quot;.&quot;&amp; LEFT(Id,4)&amp;RIGHT(Id,5) &amp;&quot;:ref&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Thread ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Credit_Balance_Amount__c</fullName>
        <label>Total Credit Balance Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Issue__c</fullName>
        <label>Total Issue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Urgent_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Urgent Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Urgent_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Urgent Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Urgent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Urgent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vendor_Chargeable_Courier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vendor Chargeable- Courier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vendor_Chargeable_Paper__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vendor Chargeable - Paper</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vendor_Email__c</fullName>
        <label>Vendor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Vendor_No__c</fullName>
        <label>Vendor No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Subscription_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vendor Subscription Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field is only populated for Change of Vendor.</inlineHelpText>
        <label>Vendor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Vendor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (Vendor)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Void_By__c</fullName>
        <label>Void By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Void_Date__c</fullName>
        <label>Void Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Waived_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Waived Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Within_Circulation_Planning_Schedule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Within Circulation Planning Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Year_To_Date_Count__c</fullName>
        <label>Year To Date Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wasRecalled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Once the case has been recalled, the checkbox will remain checked.</description>
        <label>wasRecalled</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.CLOSED</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Sub_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Recipient_Address__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>Sub_Status__c</columns>
        <columns>Subscription_Start_Date__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Account_Record_Type__c</columns>
        <columns>Temp_Stop_Date__c</columns>
        <columns>Restart_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Temp_Stop_Subscription</value>
        </filters>
        <filters>
            <field>Account_Record_Type__c</field>
            <operation>equals</operation>
            <value>Vendor Subscriber</value>
        </filters>
        <label>Vendor Start Case</label>
    </listViews>
    <listViews>
        <fullName>All_Newspaper_Complaints_Open</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>Contact_Address__c</columns>
        <columns>Sub_Category__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Complaint_Newspaper</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed,Void</value>
        </filters>
        <label>All Newspaper Complaints - Open</label>
    </listViews>
    <listViews>
        <fullName>All_Newspaper_Complaints_eh</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>Contact_Address__c</columns>
        <columns>Sub_Category__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Complaint_Newspaper</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>CASES.CLOSED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>9/1/2015 12:00 AM</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>EeHuaE2E</value>
        </filters>
        <label>All Newspaper Complaints - eh</label>
    </listViews>
    <listViews>
        <fullName>CSO_Admin_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>CSO Admin Queue</label>
        <queue>CSO_Admin_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CSO_Asst_Manager_Manager_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>CSO Asst. Manager/ Manager Queue</label>
        <queue>CSO_Asst_Manager_Manager_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CSO_Queue_Case</fullName>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Queue</filterScope>
        <label>CSO Queue</label>
        <queue>CSO_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CSO_Team_Leader_Queue_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Recipient__c</columns>
        <columns>Recipient_Address__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>CSO Team Leader Queue</label>
        <queue>CSO_Team_Leader_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cir_Ops_Cases</fullName>
        <booleanFilter>(1 OR 2) AND 3 AND 4</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Change_of_Address,Case.Start_Subscription,Case.Stop_Subscription</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Complaint_Newspaper,Case.Temp_Stop_Subscription,Case.Vendor_Stop_Request</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New,Pending,Closed</value>
        </filters>
        <filters>
            <field>CASES.CREATED_DATE_DATE_ONLY</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Cir Ops Cases</label>
        <sharedTo>
            <group>Vendor_Rep</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cir_Planner_Case</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>Cir Planner</value>
        </filters>
        <label>Cir Planner</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <roleAndSubordinatesInternal>CSO_Admin</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Circulation_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Circulation Queue</label>
        <queue>Circulation_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Complaint_Cases_No_Replacement_Require</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Complaint_Newspaper</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed,Void</value>
        </filters>
        <filters>
            <field>Replacement_Required__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>Complaint Cases - No Replacement Require</label>
    </listViews>
    <listViews>
        <fullName>Digital_Complaints_Pending_Resolution</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Case_Complaint_Digital</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Digital Complaints Pending Resolution</label>
        <sharedTo>
            <role>CSO_Admin</role>
            <role>CSO_Calls</role>
            <role>CSO_Email</role>
            <role>CSO_Managers</role>
            <role>CSO_Retention</role>
            <role>CSO_Team_Leader_Admin</role>
            <role>CSO_Team_Leader_Billing</role>
            <role>CSO_Team_Leader_Calls</role>
            <role>CSO_Team_Leader_Email</role>
            <role>CSO_Team_Leader_Retention</role>
            <role>Head_of_Customer_Service</role>
            <role>System_Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Email_to_Case_Enquiry</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>Email_to_Case_Address__c</columns>
        <columns>CASES.EMAIL</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>OWNER_NAME</columns>
        <columns>Creation_Mode__c</columns>
        <filterScope>Queue</filterScope>
        <label>Email-to-Case Enquiry</label>
        <queue>Email_to_Case_Queue</queue>
        <sharedTo>
            <role>CSO_Email</role>
            <role>CSO_Managers</role>
            <role>CSO_Team_Leader_Billing</role>
            <role>CSO_Team_Leader_Email</role>
            <role>Head_of_Customer_Service</role>
            <role>System_Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Email_to_Case_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Email to Case Queue</label>
        <queue>Email_to_Case_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Adjustments</fullName>
        <active>true</active>
        <businessProcess>Cases for Subscription Process</businessProcess>
        <description>Case for adjustments</description>
        <label>Adjustments</label>
    </recordTypes>
    <recordTypes>
        <fullName>Bypass_Credit_Card</fullName>
        <active>true</active>
        <businessProcess>Cases for Subscription Process</businessProcess>
        <label>Bypass Credit Card</label>
    </recordTypes>
    <recordTypes>
        <fullName>Case_Complaint_Digital</fullName>
        <active>true</active>
        <businessProcess>Complaint - Digital</businessProcess>
        <description>For Digital</description>
        <label>Complaint - Digital</label>
    </recordTypes>
    <recordTypes>
        <fullName>Change_Reset_Password</fullName>
        <active>false</active>
        <businessProcess>Change%2FReset Password</businessProcess>
        <description>Record Type for Change/Reset Password</description>
        <label>Change/Reset Password</label>
    </recordTypes>
    <recordTypes>
        <fullName>Change_of_Address</fullName>
        <active>true</active>
        <businessProcess>Cases for Subscription Process</businessProcess>
        <label>Change of Address/Vendor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Change_of_Credit_Card</fullName>
        <active>true</active>
        <businessProcess>Cases for Subscription Process</businessProcess>
        <label>Change of Credit Card</label>
    </recordTypes>
    <recordTypes>
        <fullName>Change_of_Particulars</fullName>
        <active>true</active>
        <businessProcess>Cases for Subscription Process</businessProcess>
        <label>Change of Particulars</label>
    </recordTypes>
    <recordTypes>
        <fullName>Change_of_Payment_Type</fullName>
        <active>true</active>
        <businessProcess>New Cases from Email Assigned to Enquiry Record Type</businessProcess>
        <label>Change of Payment Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Change_of_Subscription</fullName>
        <active>true</active>
        <businessProcess>Change of Subscription</businessProcess>
        <description>This case involves upgrade, downgrade or change of media.</description>
        <label>Change of Subscription</label>
    </recordTypes>
    <recordTypes>
        <fullName>Complaint_Magazine</fullName>
        <active>true</active>
        <businessProcess>Complaint- Magazine</businessProcess>
        <label>Complaint - Magazine</label>
    </recordTypes>
    <recordTypes>
        <fullName>Complaint_Newspaper</fullName>
        <active>true</active>
        <businessProcess>Complaint- Newspaper</businessProcess>
        <label>Complaint - Newspaper</label>
    </recordTypes>
    <recordTypes>
        <fullName>Enquiry</fullName>
        <active>true</active>
        <businessProcess>New Cases from Email Assigned to Enquiry Record Type</businessProcess>
        <description>Default record type for email to case.</description>
        <label>Enquiry</label>
    </recordTypes>
    <recordTypes>
        <fullName>Refund</fullName>
        <active>true</active>
        <businessProcess>Cases for Subscription Process</businessProcess>
        <label>Refund</label>
    </recordTypes>
    <recordTypes>
        <fullName>Renewal_of_Subscription</fullName>
        <active>true</active>
        <businessProcess>Renewal of Subscription</businessProcess>
        <label>Renewal of Subscription</label>
    </recordTypes>
    <recordTypes>
        <fullName>Retention_Outbound</fullName>
        <active>true</active>
        <businessProcess>Retention Outbound</businessProcess>
        <description>This Record Type value shall not be visible or selectable during normal Case creation.</description>
        <label>Retention Outbound</label>
    </recordTypes>
    <recordTypes>
        <fullName>Start_Subscription</fullName>
        <active>true</active>
        <businessProcess>Cases for Subscription Process</businessProcess>
        <label>Start Subscription</label>
    </recordTypes>
    <recordTypes>
        <fullName>Stop_Subscription</fullName>
        <active>true</active>
        <businessProcess>Cases for Subscription Process</businessProcess>
        <label>Stop Subscription</label>
    </recordTypes>
    <recordTypes>
        <fullName>Temp_Stop_Subscription</fullName>
        <active>true</active>
        <businessProcess>Cases for Subscription Process</businessProcess>
        <label>Temp Stop Subscription</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vendor_Stop_Request</fullName>
        <active>true</active>
        <businessProcess>Cases for Subscription Process</businessProcess>
        <label>Vendor Stop Request/Complaint</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>AccountRequired</fullName>
        <active>false</active>
        <description>Requires a user to enter a value</description>
        <errorConditionFormula>RecordType.DeveloperName == &quot;Change of Payment Type&quot; &amp;&amp; AccountId == null</errorConditionFormula>
        <errorDisplayField>AccountId</errorDisplayField>
        <errorMessage>Please enter Account value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ApprovedRejectedGoodwillDigital</fullName>
        <active>true</active>
        <description>D-1951</description>
        <errorConditionFormula>AND(OR(ISPICKVAL(Goodwill_Approval_Status__c,&apos;Approved&apos;) ,ISPICKVAL(Goodwill_Approval_Status__c,&apos;Rejected&apos;)), ISCHANGED( Goodwill_Amount__c))</errorConditionFormula>
        <errorMessage>Approved/Rejected Goodwill Amount cannot be updated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BillingAccountRequired</fullName>
        <active>false</active>
        <description>Requires a user to enter a value</description>
        <errorConditionFormula>RecordType.Name == &quot;Refund&quot; &amp;&amp; Billing_Account_Name__c == null</errorConditionFormula>
        <errorDisplayField>Billing_Account_Name__c</errorDisplayField>
        <errorMessage>Please enter Billing Account value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BypassCreditCard</fullName>
        <active>true</active>
        <description>Prevents the user in choosing both Stop Charging Credit Card and Start Charging Credit options.</description>
        <errorConditionFormula>if (Start_Charging_Credit_Card__c == True &amp;&amp;  Stop_Charging_Credit_Card__c == True, True, False)</errorConditionFormula>
        <errorMessage>Please choose one of the following: Start Charging Credit Card or Stop Charging Credit Card</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Bypass_CC_Generate_Arms</fullName>
        <active>true</active>
        <description>user should not be able to create a case if only Generate Arms Invoice is ticked 
UD-1378</description>
        <errorConditionFormula>(Stop_Charging_Credit_Card__c  == false &amp;&amp;  Generate_Arms_Invoice__c == true &amp;&amp;  Start_Charging_Credit_Card__c == false) ||  (Stop_Charging_Credit_Card__c  == true &amp;&amp;  Generate_Arms_Invoice__c == false &amp;&amp;  Start_Charging_Credit_Card__c == false)</errorConditionFormula>
        <errorDisplayField>Generate_Arms_Invoice__c</errorDisplayField>
        <errorMessage>Generate Arms Invoice should come along with Stop Charging Credit Card.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Bypass_CC_Start_Charging</fullName>
        <active>true</active>
        <description>user should not be able to tick Generate Arms Invoice 
UD-1378</description>
        <errorConditionFormula>Start_Charging_Credit_Card__c == true &amp;&amp;  Generate_Arms_Invoice__c == true</errorConditionFormula>
        <errorDisplayField>Generate_Arms_Invoice__c</errorDisplayField>
        <errorMessage>Generate Arms Invoice is not allowed for Start Charging Credit Card.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Bypass_Start_ChargeDate</fullName>
        <active>true</active>
        <description>unpopulate Reminder Date to Recharge when Start Charging Credit Card is checked.</description>
        <errorConditionFormula>Start_Charging_Credit_Card__c &amp;&amp;  NOT(ISBLANK(Charging_Date__c)) &amp;&amp;  (RecordType.Name = &quot;Bypass Credit Card&quot;)</errorConditionFormula>
        <errorMessage>Please unpopulate Reminder Date to Recharge when Start Charging Credit Card is checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Bypass_Start_Stop_Date_Invoice</fullName>
        <active>true</active>
        <description>Bypass credit card - to not allow creating Bypass of Credit Card without selecting any of the below fields. 

Start Charging Credit Card
Stop Charging Credit Card
Generate ARMS Invoice
Reminder Date to Recharge</description>
        <errorConditionFormula>Generate_Arms_Invoice__c = false &amp;&amp; Start_Charging_Credit_Card__c = false &amp;&amp; Stop_Charging_Credit_Card__c = false &amp;&amp; RecordType.Name = &quot;Bypass Credit Card&quot; &amp;&amp; ISBLANK(Charging_Date__c) &amp;&amp; (ISBLANK(TEXT(Sub_Category__c)) || ISPICKVAL(Sub_Category__c, &apos;Bypass Credit Card&apos;))</errorConditionFormula>
        <errorMessage>Please populate either of the main fields (Start Charging Credit Card,
Stop Charging Credit Card,
Generate ARMS Invoice,
Reminder Date to Recharge)</errorMessage>
    </validationRules>
</CustomObject>